catkin release makefile rules for kobuki_msgs, kobuki, yujin_ocs

--- a/catkin/kobuki/Makefile
+++ b/catkin/kobuki/Makefile
@@ -1,7 +1,7 @@
 SHELL := /bin/bash
-#REPOS="rocon_msgs" "rocon_multimaster" "rocon_app_platform" "rocon_concert" "rocon_tutorials" "rocon_rqt_plugins"
-REPOS="rocon_rqt_plugins"
-SRC_GIT=https://github.com/robotics-in-concert
+#REPOS="kobuki_msgs" "kobuki" "yujin_ocs"
+REPOS="yujin_ocs"
+SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
 
 help:
