--- a/catkin/ecl/Makefile
+++ b/catkin/ecl/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
-REPOS="ecl_tools" "ecl_lite" "ecl_core" "ecl_manipulation" "ecl_navigation"
-#REPOS="yujin_ocs" "kobuki"
+#REPOS="ecl_tools" "ecl_lite" "ecl_core" "ecl_manipulation" "ecl_navigation"
+REPOS="ecl_tools"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 
