--- a/catkin/zeroconf/Makefile
+++ b/catkin/zeroconf/Makefile
@@ -1,9 +1,9 @@
 SHELL := /bin/bash
-#REPOS="ecl_tools" "ecl_lite" "ecl_core" "ecl_manipulation" "ecl_navigation"
-REPOS="ecl_tools"
+REPOS="zeroconf_msgs" "zeroconf_avahi_suite"
+REPOS="zeroconf_avahi_suite"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=groovy
+TRACK=hydro
 
 include ../Makefile
 
