--- a/catkin/kobuki/Makefile
+++ b/catkin/kobuki/Makefile
@@ -3,7 +3,7 @@ SHELL := /bin/bash
 REPOS="kobuki"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=groovy
+TRACK=hydro
 
 include ../Makefile
 
