adding kobuki_core

--- a/catkin/kobuki/Makefile
+++ b/catkin/kobuki/Makefile
@@ -1,5 +1,5 @@
 SHELL := /bin/bash
-#REPOS="kobuki_msgs" "kobuki" "yujin_ocs"
+#REPOS="kobuki_msgs" "kobuki_core" "kobuki" "yujin_ocs"
 REPOS="kobuki"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
