rosjava_tools moved.

--- a/catkin/rosjava_tools/Makefile
+++ b/catkin/rosjava_tools/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 REPOS="rosjava_tools"
-SRC_GIT=https://github.com/ros-java
+SRC_GIT=https://github.com/rosjava
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=hydro
 
