--- a/catkin/rosjava/Makefile
+++ b/catkin/rosjava/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 #REPOS="rosjava_build_tools" "rosjava_bootstrap" "rosjava_messages"
-REPOS="rosjava_bootstrap"
+REPOS="rosjava_build_tools" "rosjava_bootstrap"
 SRC_GIT=https://github.com/rosjava
 REL_GIT=https://github.com/rosjava-release
 TRACK=hydro
