--- a/catkin/turtlebot/Makefile
+++ b/catkin/turtlebot/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 #REPOS="turtlebot" "rosjava_bootstrap" "rosjava_messages"
-REPOS="turtlebot"
+REPOS="turtlebot_apps"
 SRC_GIT=https://github.com/turtlebot
 REL_GIT=https://github.com/turtlebot-release
 TRACK=hydro
