hydro tag for qt_ros

--- a/catkin/qt_ros/Makefile
+++ b/catkin/qt_ros/Makefile
@@ -3,7 +3,7 @@ SHELL := /bin/bash
 REPOS="qt_ros"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=groovy
+TRACK=hydro
 
 include ../Makefile
 
