--- a/catkin/qt_ros/Makefile
+++ b/catkin/qt_ros/Makefile
@@ -4,6 +4,7 @@ REPOS="qt_ros"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=hydro
+SOURCE_BRANCH=hydro
 
 include ../Makefile
 
