--- a/catkin/ecl/Makefile
+++ b/catkin/ecl/Makefile
@@ -1,9 +1,10 @@
 SHELL := /bin/bash
 #REPOS="ecl_tools" "ecl_lite" "ecl_core" "ecl_manipulation" "ecl_navigation"
-REPOS="ecl_core"
+REPOS="ecl_tools"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=hydro
+SOURCE_BRANCH=hydro-devel
 
 include ../Makefile
 
