--- a/catkin/common_tutorials/Makefile
+++ b/catkin/common_tutorials/Makefile
@@ -2,9 +2,9 @@ SHELL := /bin/bash
 #REPOS="rocon_msgs" "rocon_multimaster" "rocon_app_platform" "rocon_concert" "rocon_tutorials" "rocon_rqt_plugins"
 REPOS="common_tutorials"
 SRC_GIT=https://github.com/ros
-REL_GIT=https://github.com/yujinrobot-release
-TRACK=indigo
-SOURCE_BRANCH=indigo
+REL_GIT=https://github.com/ros-gbp
+TRACK=hydro-devel
+SOURCE_BRANCH=hydro-devel
 
 include ../Makefile
 
