--- a/catkin/qt_ros/Makefile
+++ b/catkin/qt_ros/Makefile
@@ -1,10 +1,9 @@
 SHELL := /bin/bash
-#REPOS="rocon_msgs" "rocon_multimaster" "rocon_app_platform" "rocon_concert" "rocon_tutorials" "rocon_rqt_plugins"
 REPOS="qt_ros"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=hydro
-SOURCE_BRANCH=hydro
+TRACK=indigo
+SOURCE_BRANCH=indigo
 
 include ../Makefile
 
