--- a/catkin/cv_backports/Makefile
+++ b/catkin/cv_backports/Makefile
@@ -1,12 +1,9 @@
 SHELL := /bin/bash
-REPOS="opencv2"
+REPOS="cv_backports"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=indigo
 SOURCE_BRANCH=indigo
 
-#include ../Makefile
-
-bloom:
-	bloom-release --track ${TRACK} --rosdistro ${TRACK} opencv2
+include ../Makefile
 
