--- a/catkin/rosjava/Makefile
+++ b/catkin/rosjava/Makefile
@@ -1,10 +1,10 @@
 SHELL := /bin/bash
-#REPOS="rosjava_build_tools" "rosjava_bootstrap" "rosjava_messages" "rosjava_core" "rosjava_extras" "zeroconf_jmdns_suite"
-REPOS="rosjava_messages"
+#REPOS="rosjava_build_tools" "rosjava_bootstrap" "genjava" "rosjava_test_msgs" "rosjava_messages" "rosjava_core" "rosjava_extras" "zeroconf_jmdns_suite"
+REPOS="rosjava_build_tools"
 SRC_GIT=https://github.com/rosjava
 REL_GIT=https://github.com/rosjava-release
-TRACK=hydro
-SOURCE_BRANCH=hydro
+TRACK=indigo
+SOURCE_BRANCH=indigo
 
 include ../Makefile
 
