catkin releases, added termcolor

--- a/catkin/termcolor/Makefile
+++ b/catkin/termcolor/Makefile
@@ -1,6 +1,5 @@
 SHELL := /bin/bash
-#REPOS="ecl_tools" "ecl_lite" "ecl_core" "ecl_manipulation" "ecl_navigation"
-REPOS="ecl_manipulation" "ecl_navigation"
+REPOS="termcolor"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=indigo
