updated kobuki makefile

--- a/catkin/kobuki/Makefile
+++ b/catkin/kobuki/Makefile
@@ -1,9 +1,10 @@
 SHELL := /bin/bash
 #REPOS="kobuki_msgs" "kobuki_core" "kobuki" "yujin_ocs"
-REPOS="kobuki"
+REPOS="kobuki_core"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=hydro
+TRACK=indigo
+SOURCE_BRANCH=indigo
 
 include ../Makefile
 
