sophus_ros_toolkit and qglv_toolkit for blooming

--- a/catkin/sophus_ros_toolkit/Makefile
+++ b/catkin/sophus_ros_toolkit/Makefile
@@ -1,5 +1,5 @@
 SHELL := /bin/bash
-REPOS="qglv_toolkit"
+REPOS="sophus_ros_toolkit"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=indigo
