gitignores and kinetic defaults

--- a/catkin/kobuki/Makefile
+++ b/catkin/kobuki/Makefile
@@ -3,8 +3,8 @@ SHELL := /bin/bash
 REPOS="kobuki_core"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=indigo
-SOURCE_BRANCH=indigo
+TRACK=kinetic
+SOURCE_BRANCH=kinetic
 
 include ../Makefile
 
