--- a/catkin/yocs/Makefile
+++ b/catkin/yocs/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
-#REPOS="yocs_msgs" "yocs"
-REPOS="yocs_msgs"
+#REPOS="yocs_msgs" "yujin_ocs"
+REPOS="yujin_ocs"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=kinetic
