--- a/catkin/rocon/Makefile
+++ b/catkin/rocon/Makefile
@@ -1,10 +1,10 @@
 SHELL := /bin/bash
 #REPOS="rocon_msgs" "rocon_multimaster" "rocon_app_platform" "rocon_concert" "rocon_tutorials" "rocon_rqt_plugins"
-REPOS="rocon_tools"
+REPOS="rocon_msgs"
 SRC_GIT=https://github.com/robotics-in-concert
 REL_GIT=https://github.com/yujinrobot-release
-TRACK=indigo
-SOURCE_BRANCH=indigo
+TRACK=kinetic
+SOURCE_BRANCH=kinetic
 
 include ../Makefile
 
