first bloom of rqt_wrapper

--- a/catkin/rqt_wrapper/Makefile
+++ b/catkin/rqt_wrapper/Makefile
@@ -3,7 +3,7 @@ REPOS="rqt_wrapper"
 SRC_GIT=https://github.com/stonier
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=indigo
-SOURCE_BRANCH=indigo-stable
+SOURCE_BRANCH=release/0.1-indigo
 
 include ../Makefile
 
