--- a/catkin/sophus_ros_toolkit/Makefile
+++ b/catkin/sophus_ros_toolkit/Makefile
@@ -3,7 +3,7 @@ REPOS="sophus_ros_toolkit"
 SRC_GIT=https://github.com/yujinrobot
 REL_GIT=https://github.com/yujinrobot-release
 TRACK=indigo
-SOURCE_BRANCH=indigo-stable
+SOURCE_BRANCH=release/0.1-indigo-kinetic
 
 include ../Makefile
 
